docker file + docker compose spring service done